[project]
name = "langchain-moss-monorepo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx[socks]>=0.28.1",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-moss",
    "langchain-openai>=0.3.7",
    "langgraph>=0.3.5",
    "streamlit>=1.43.1",
]



[tool.uv.workspace]
members = ["langchain_moss"]

[tool.uv.sources]
langchain-moss = { workspace = true }
