[project]
name = "langchain-moss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thirdgerb", email = "thirdgerb@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "ghostos-moss>=0.3.3",
    "langchain>=0.3.19",
    "langchain-core>=0.3.40",
]

[project.scripts]
langchain-moss = "langchain_moss:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
